--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   },
   "description": "",
   "devDependencies": {
-    "env-cmd": "^10.1.0"
+    "env-cmd": "^10.1.0",
+    "jest": "^29.0.2",
+    "supertest": "^6.2.4"
   }
 }
