--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.7.0",
@@ -26,6 +27,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.16",
     "sharp": "^0.30.7",
+    "sib-api-v3-sdk": "^8.4.2",
     "socket.io": "^4.5.1",
     "validator": "^13.7.0"
   },
