--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "env-cmd -f ./config/test.env jest --watch --runInBand",
-    "start": "env-cmd -f ./config/dev.env nodemon src/index.js",
+    "start": "nodemon src/index.js",
     "dev": "env-cmd -f ./config/dev.env nodemon src/index.js"
   },
   "jest": {
