--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
+    "@withvoid/make-validation": "^1.0.5",
     "bad-words": "^3.0.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
@@ -22,13 +23,16 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "logger": "^0.0.1",
     "mongodb": "^4.7.0",
     "mongoose": "^6.4.0",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.16",
     "sharp": "^0.30.7",
     "sib-api-v3-sdk": "^8.4.2",
     "socket.io": "^4.5.1",
+    "uuid": "^9.0.0",
     "validator": "^13.7.0"
   },
   "description": "",
