--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "env-cmd -f ./config/test.env jest --watch --runInBand",
-    "start": "node src/index.js",
+    "build": "netlify deploy --prod",
+    "start": "env-cmd -f ./config/dev.env netlify dev",
     "dev": "env-cmd -f ./config/dev.env nodemon src/index.js"
   },
   "jest": {
@@ -29,6 +30,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.16",
+    "serverless-http": "^3.2.0",
     "sharp": "^0.30.7",
     "sib-api-v3-sdk": "^8.4.2",
     "socket.io": "^4.5.1",
