--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "env-cmd -f ./config/test.env jest --watch --runInBand",
-    "start": "node src/index.js",
+    "build": "netlify deploy --prod",
+    "start": "env-cmd -f ./config/dev.env netlify dev",
     "dev": "env-cmd -f ./config/dev.env nodemon src/index.js"
   },
   "jest": {
