--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "main": "index.js",
   "scripts": {
     "test": "env-cmd -f ./config/test.env jest --watch --runInBand",
-    "build": "netlify deploy --prod",
-    "start": "env-cmd -f ./config/dev.env netlify dev",
-    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js"
+    "build": "npm run build",
+    "start": "env-cmd -f ./config/dev.env index.js",
+    "dev": "env-cmd -f ./config/dev.env nodemon index.js"
   },
   "jest": {
     "testEnvironment": "node"
