--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "env-cmd -f ./config/test.env jest --watch --runInBand",
-    "build": "npm run build",
-    "start": "env-cmd -f ./config/dev.env index.js",
+    "build": "yarn build",
+    "start": "env-cmd -f ./config/dev.env node index.js",
     "dev": "env-cmd -f ./config/dev.env nodemon index.js"
   },
   "jest": {
