--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "env-cmd -f ./config/test.env jest --watch --runInBand",
-    "build": "yarn build",
+    "build": "npm run build",
     "start": "env-cmd -f ./config/dev.env node index.js",
     "dev": "env-cmd -f ./config/dev.env nodemon index.js"
   },
